# book_agent

./: .env  .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt  test.py
alembic/: env.py
alembic/versions/: 16e61ea3dcf1_initial_tables.py  4520b9703b95_.py  4fa701a0d3f7_initial_tables.py  6d84cee6cd25_create_books_and_chapters.py  c9918569a687_describe_your_changes.py  e1f5a0281920_initial_tables.py
backend/: chroma_db.py  chunking.py  config.py  database.py  ingestion_pipline.py  main.py  models.py  oauth2.py  query.py  query_rewriter.py  rate_limit.py  schemas.py  utils.py
backend/prompts/: system.py  user.py
backend/routers/: library.py  login.py  query_api.py  singin.py  upload.py
chroma_db/069a0051-585d-4548-b71d-63676f462245/: index_metadata.pickle
frontend/: app.js  index.html  login.html  reader.html  signup.html  style.css  upload.html
