[project]
name = "ai-book-teacher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "bcrypt==4.0.1",
    "chromadb>=1.5.9",
    "dotenv>=0.9.9",
    "fastapi>=0.137.1",
    "langchain-text-splitters>=1.1.2",
    "ollama>=0.6.2",
    "passlib>=1.7.4",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.12",
    "pydantic[email]>=2.13.4",
    "pymupdf>=1.27.2.3",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "sentence-transformers>=5.6.0",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]
