[project]
name = "ai-book-teacher"
version = "0.1.0"
description = "AI Book Teacher Backend"
readme = "README.md"
requires-python = ">=3.11,<3.14"

dependencies = [
    "alembic>=1.18.4",
    "bcrypt==4.0.1",
    "chromadb>=1.5.9",
    "docling>=2.108.0",
    "easyocr>=1.7.2",
    "fastapi>=0.137.1",
    "langchain>=1.0.0",
    "langchain-text-splitters>=1.1.2",
    "ollama>=0.6.2",
    "openai>=2.44.0",
    "paddleocr==3.0.3",
    "passlib>=1.7.4",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.12",
    "pydantic[email]>=2.13.4",
    "pymupdf>=1.27.2",
    "python-dotenv>=1.1.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "sentence-transformers>=5.1.0",
    "sqlalchemy>=2.0.51",
    "torch==2.11.0",
    "torchaudio==2.11.0",
    "torchvision==0.26.0",
    "uvicorn>=0.49.0",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
